--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@
 }
 
 body {
-  background-image: url(assets/bg-image\ .jpg);
+  background: 
+    linear-gradient(rgba(87, 56, 36, 0.7), rgba(87, 56, 36, 0.7)), /* 70% opacity color */
+    url(assets/bg-image\ .jpg);
   background-size: cover;
 }
 
@@ -21,7 +23,7 @@ width: 800px;
 padding: 24px;
 background-color: #F0E8C2;
 border-radius: 24px;
-margin: 48px auto;
+margin: 48px auto 28px;
 }
 
 
@@ -59,4 +61,15 @@ h1, h2 {
 
 ul {
   padding-left: 24px;
+}
+
+footer {
+  color: #F0E8C2;
+  text-align: center;
+  padding-bottom: 48px;
+}
+
+
+footer img {
+  vertical-align: middle;
 }
